[package]
name = "repology"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Rust client for the Repology API"
documentation = "https://docs.rs/repology"
homepage = "https://github.com/koca-build/repology-rs"
repository = "https://github.com/koca-build/repology-rs"
readme = "README.md"
keywords = ["repology", "packaging", "api-client", "linux"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
async-stream = "0.3"
bon = "3.9"
futures-core = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
url = "2"
backon = { version = "1", default-features = false, features = ["std", "tokio-sleep"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
